Enable Netlify forms

--- a/contact-it.html
+++ b/contact-it.html
@@ -72,7 +72,11 @@
         <h2>Modulo</h2>
         <div class="grid-2">
           <div class="card">
-            <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+            <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+              <input type="hidden" name="form-name" value="contact" />
+              <p hidden>
+                <label>Non compilare: <input name="bot-field" /></label>
+              </p>
               <label for="nom"><strong>Nome</strong></label>
               <input id="nom" name="nom" type="text" required />
 
@@ -97,7 +101,6 @@
               <p class="meta">Inviando questo modulo, acconsentite all’utilizzo dei dati per essere ricontattati in relazione alla vostra richiesta.</p>
               <button class="btn btn-primary" type="submit">Inviare</button>
             </form>
-            <script defer src="./js/form.js"></script>
           </div>
         </div>
       </div>
