--- a/contact-en.html
+++ b/contact-en.html
@@ -63,7 +63,11 @@
         <h2>Form</h2>
         <div class="grid-2">
           <div class="card">
-            <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+            <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+              <input type="hidden" name="form-name" value="contact" />
+              <p hidden>
+                <label>Don’t fill this out: <input name="bot-field" /></label>
+              </p>
               <label for="nom"><strong>Name</strong></label>
               <input id="nom" name="nom" type="text" required />
               <label for="email"><strong>Email</strong></label>
@@ -83,7 +87,6 @@
               <p class="meta">By submitting this form you agree that the information will be used to contact you regarding your request.</p>
               <button class="btn btn-primary" type="submit">Send</button>
             </form>
-            <script defer src="./js/form.js"></script>
           </div>
         </div>
       </div>
