add sitemap and seo tags

--- a/cabinet-en.html
+++ b/cabinet-en.html
@@ -10,6 +10,11 @@
   <meta property="og:title" content="Le cabinet — Avocate en droit de la famille à Nice" />
   <meta property="og:description" content="Approach, background and practical information about the firm. Family law in Nice." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/cabinet.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/cabinet-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/cabinet.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
