--- a/confidentialite-it.html
+++ b/confidentialite-it.html
@@ -7,6 +7,11 @@
   <title>Informativa sulla privacy — Avv. Mary ALBERTIN ROBY</title>
   <meta name="description" content="Informativa sulla privacy e protezione dei dati personali dello studio.">
 
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/confidentialite-it.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/confidentialite-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/confidentialite-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./js/main.js"></script>
 </head>
