--- a/contact-it.html
+++ b/contact-it.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contatto — Avvocato in diritto di famiglia a Nizza</title>
   <meta name="description" content="Contattare lo studio: appuntamenti, recapiti e modulo di contatto." />
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/contact-it.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/contact.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/contact-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/contact-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/contact.html">
   <link rel="stylesheet" href="./css/styles.css" />
   <script defer src="./js/main.js"></script>
 </head>
