--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -7,6 +7,11 @@
   <title>Mentions légales — Maître Mary ALBERTIN ROBY</title>
   <meta name="description" content="Mentions légales du cabinet de Maître Mary ALBERTIN ROBY, avocate au Barreau de Nice.">
 
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/mentions-legales.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/mentions-legales.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/mentions-legales-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/mentions-legales-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/mentions-legales.html">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./js/main.js"></script>
 </head>
