--- a/confidentialite.html
+++ b/confidentialite.html
@@ -7,6 +7,11 @@
   <title>Politique de confidentialité — Maître Mary ALBERTIN ROBY</title>
   <meta name="description" content="Politique de confidentialité et protection des données personnelles du cabinet.">
 
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/confidentialite-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/confidentialite-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./js/main.js"></script>
 </head>
