--- a/en/confidentialite.html
+++ b/en/confidentialite.html
@@ -7,6 +7,11 @@
   <title>Privacy Policy — Maître Mary ALBERTIN ROBY</title>
   <meta name="description" content="Privacy policy and personal data protection for the firm.">
 
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/en/confidentialite.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/en/confidentialite.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/confidentialite-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/confidentialite.html">
   <link rel="stylesheet" href="../css/styles.css">
   <script defer src="../js/main.js"></script>
 </head>
