--- a/famille-it.html
+++ b/famille-it.html
@@ -10,6 +10,11 @@
   <meta property="og:title" content="Diritto di famiglia — Avvocata a Nizza" />
   <meta property="og:description" content="Divorzio, separazione, figli, assegno di mantenimento, successioni. Diritto di famiglia a Nizza." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/famille-it.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/famille.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/famille-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/famille-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/famille.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
