--- a/honoraires-it.html
+++ b/honoraires-it.html
@@ -11,6 +11,11 @@
   <meta property="og:description" content="Consulenza, modalità di fatturazione e accordo sugli onorari." />
   <meta property="og:type" content="website" />
 
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/honoraires-it.html">
+  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/honoraires.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/honoraires-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/honoraires-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/honoraires.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
