--- a/mentions-legales-it.html
+++ b/mentions-legales-it.html
@@ -6,7 +6,10 @@
 
   <title>Note legali — Avv. Mary ALBERTIN ROBY</title>
   <meta name="description" content="Note legali dello studio dell’Avv. Mary ALBERTIN ROBY, iscritta all’Ordine degli Avvocati di Nizza.">
-
+  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/mentions-legales-it.html">  <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/mentions-legales.html">
+  <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/mentions-legales-en.html">
+  <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/mentions-legales-it.html">
+  <link rel="alternate" hreflang="x-default" href="https://albertinroby-avocat.netlify.app/mentions-legales.html">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./js/main.js"></script>
 </head>
