--- a/famille.html
+++ b/famille.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Droit de la famille — Avocate à Nice</title>
-  <meta name="description" content="Droit de la famille à Nice : divorce, séparation, enfants, pension alimentaire, successions. Cadre d’intervention et prise de rendez-vous." />
+  <title>Avocat en droit de la famille à Nice – Me ALBERTIN Roby</title>
+  <meta name="description" content="Me ALBERTIN Roby, avocate en droit de la famille à Nice. Divorce, séparation, enfants, pension alimentaire. Cabinet à Nice centre, sur rendez-vous." />
 
-  <meta property="og:title" content="Droit de la famille — Avocate à Nice" />
-  <meta property="og:description" content="Divorce, séparation, enfants, pension alimentaire, successions. Droit de la famille à Nice." />
+  <meta property="og:title" content="Avocat en droit de la famille à Nice – Me ALBERTIN Roby" />
+  <meta property="og:description" content="Me ALBERTIN Roby, avocate en droit de la famille à Nice. Divorce, séparation, enfants, pension alimentaire." />
   <meta property="og:type" content="website" />
   <link rel="canonical" href="https://albertinroby-avocat.netlify.app/famille.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/famille.html">
@@ -62,7 +62,7 @@
       <div class="container hero-grid">
         <div>
           <div class="kicker">Droit de la famille</div>
-          <h1>Divorce, séparation, enfants, successions</h1>
+          <h1>Avocat en droit de la famille à Nice</h1>
           
 
           <div class="card" style="margin-top:1rem;">
@@ -214,6 +214,7 @@
 </p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
+        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
         <a href="./mentions-legales.html">Mentions légales</a>
         <a href="./confidentialite.html">Confidentialité</a>
       </div>
