--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -82,6 +82,7 @@
 <footer>
   <div class="container">
     <p class="meta">
+      <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a><br>
       © Maître Mary ALBERTIN ROBY — Avocate au Barreau de Nice
     </p>
   </div>
