Update contact info: remove Menton office and fixed phone; add transactions pages

--- a/cabinet-it.html
+++ b/cabinet-it.html
@@ -50,6 +50,7 @@
           <li><a href="./index-it.html">Home</a></li>
           <li><a href="./cabinet-it.html" aria-current="page">Lo studio</a></li>
           <li><a href="./famille-it.html">Diritto di famiglia</a></li>
+          <li><a href="./transactions-it.html">Transazioni immobiliari</a></li>
           <li><a href="./honoraires-it.html">Onorari</a></li>
           <li><a class="btn btn-primary" href="./contact-it.html">Contatto</a></li>
         </ul>
@@ -74,7 +75,7 @@
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact-it.html">Prenotare un appuntamento</a>
-            <a class="btn" href="tel:+33493803069">Chiamare lo studio</a>
+            <a class="btn" href="tel:+33660723599">Chiamare lo studio</a>
           </div>
 
           <p class="meta" style="margin-top:.8rem;">
@@ -93,7 +94,7 @@
           <div class="card" style="margin-top:.8rem;">
             <h2 style="margin-bottom:.4rem;">Contatti</h2>
             <p><strong>Indirizzo:</strong> 15 rue de l’Hôtel des Postes, 06000 Nizza</p>
-            <p><strong>Telefono:</strong> <a href="tel:+33493803069">+33 4 93 80 30 69</a></p>
+            <p><strong>Telefono:</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
             <p><strong>Email:</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
             <p class="meta"><strong>Orari:</strong> Lun–Ven 9:00–18:00 (su appuntamento)</p>
           </div>
@@ -155,8 +156,7 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-          Nizza — 15 rue de l’Hôtel des Postes, 06000 Nizza — <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
-          Mentone — L’Orient Palace, 1 rue de la République, 06500 Mentone — <a href="tel:+33660723599">+33 6 60 72 35 99</a><br>
+          Nizza — 15 rue de l'Hôtel des Postes, 06000 Nizza — <a href="tel:+33660723599">06 60 72 35 99</a><br>
           <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
         </p>
       </div>
