--- a/contact-en.html
+++ b/contact-en.html
@@ -34,6 +34,7 @@
           <li><a href="./index-en.html">Home</a></li>
           <li><a href="./cabinet-en.html">The firm</a></li>
           <li><a href="./famille-en.html">Family law</a></li>
+          <li><a href="./transactions-en.html">Real estate transactions</a></li>
           <li><a href="./honoraires-en.html">Fees</a></li>
           <li><a class="btn btn-primary" href="./contact-en.html" aria-current="page">Contact</a></li>
         </ul>
@@ -49,15 +50,14 @@
           <strong>ALBERTIN-ROBY Mary</strong>
           <p class="lead">You can contact the firm by phone, email, or using the form below.</p>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="tel:+33493803069">Call</a>
+            <a class="btn btn-primary" href="tel:+33660723599">Call</a>
             <a class="btn" href="mailto:albertinroby@bbox.fr">Send an email</a>
           </div>
         </div>
 
         <aside class="card" aria-label="Contact details">
           <h2>Contact details</h2>
-          <p class="meta"><strong>Main office:</strong><br>15 rue de l’Hôtel des Postes, 06000 Nice<br><strong>Phone:</strong> <a href="tel:+33493803069">+33 4 93 80 30 69</a></p>
-          <p class="meta"><strong>Secondary office:</strong><br>L’Orient Palace, 1 rue de la République, 06500 Menton<br><strong>Mobile:</strong> <a href="tel:+33660723599">+33 6 60 72 35 99</a></p>
+          <p class="meta"><strong>Office:</strong><br>15 rue de l'Hôtel des Postes, 06000 Nice<br><strong>Phone:</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
           <p class="meta"><strong>Email:</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
         </aside>
       </div>
@@ -101,8 +101,7 @@
   <footer>
     <div class="container footer-grid">
       <div>
-        <p class="meta">Nice — 15 rue de l’Hôtel des Postes, 06000 Nice — <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
-        Menton — L’Orient Palace, 1 rue de la République, 06500 Menton — <a href="tel:+33660723599">+33 6 60 72 35 99</a><br>
+        <p class="meta">Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
         <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Footer links">
