--- a/contact-it.html
+++ b/contact-it.html
@@ -37,6 +37,7 @@
           <li><a href="./index-it.html">Home</a></li>
           <li><a href="./cabinet-it.html">Lo studio</a></li>
           <li><a href="./famille-it.html">Diritto di famiglia</a></li>
+          <li><a href="./transactions-it.html">Transazioni immobiliari</a></li>
           <li><a href="./honoraires-it.html">Onorari</a></li>
           <li><a class="btn btn-primary" href="./contact-it.html" aria-current="page">Contatto</a></li>
         </ul>
@@ -52,20 +53,16 @@
           <strong>ALBERTIN-ROBY Mary</strong>
           <p class="lead">È possibile contattare lo studio telefonicamente, via email o tramite il modulo sottostante.</p>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="tel:+33493803069">Chiamare</a>
+            <a class="btn btn-primary" href="tel:+33660723599">Chiamare</a>
             <a class="btn" href="mailto:albertinroby@bbox.fr">Inviare un’email</a>
           </div>
         </div>
 
         <aside class="card" aria-label="Recapiti">
           <h2>Contatti</h2>
-          <p class="meta"><strong>Sede principale:</strong><br>
-            15 rue de l’Hôtel des Postes, 06000 Nizza<br>
-            <strong>Telefono:</strong> <a href="tel:+33493803069">+33 4 93 80 30 69</a>
-          </p>
-          <p class="meta"><strong>Sede secondaria:</strong><br>
-            L’Orient Palace, 1 rue de la République, 06500 Mentone<br>
-            <strong>Cellulare:</strong> <a href="tel:+33660723599">+33 6 60 72 35 99</a>
+          <p class="meta"><strong>Studio:</strong><br>
+            15 rue de l'Hôtel des Postes, 06000 Nizza<br>
+            <strong>Telefono:</strong> <a href="tel:+33660723599">06 60 72 35 99</a>
           </p>
           <p class="meta"><strong>Email:</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
         </aside>
@@ -116,8 +113,7 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-          Nizza — 15 rue de l’Hôtel des Postes, 06000 Nizza — <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
-          Mentone — L’Orient Palace, 1 rue de la République, 06500 Mentone — <a href="tel:+33660723599">+33 6 60 72 35 99</a><br>
+          Nizza — 15 rue de l'Hôtel des Postes, 06000 Nizza — <a href="tel:+33660723599">06 60 72 35 99</a><br>
           <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
         </p>
       </div>
