--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
           <li><a href="./index.html">Accueil</a></li>
           <li><a href="./cabinet.html">Le cabinet</a></li>
           <li><a href="./famille.html">Droit de la famille</a></li>
+          <li><a href="./transactions.html">Transactions immobilières</a></li>
           <li><a href="./honoraires.html">Honoraires</a></li>
           <li><a class="btn btn-primary" href="./contact.html" aria-current="page">Contact</a></li>
         </ul>
@@ -50,7 +51,7 @@
              <a href="./contact.html">FR</a>
            </div>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="tel:+33493803069">Appeler</a>
+            <a class="btn btn-primary" href="tel:+33660723599">Appeler</a>
             <a class="btn" href="mailto:albertinroby@bbox.fr">Envoyer un email</a>
           </div>
 
@@ -62,8 +63,7 @@
 
         <aside class="card" aria-label="Coordonnées">
           <h2 style="margin-bottom:.4rem;">Coordonnées</h2>
-          <p class="meta"><strong>Cabinet principal :</strong><br>15 rue de l’Hôtel des Postes, 06000 Nice<br><strong>Tél :</strong> <a href="tel:+33493803069">04 93 80 30 69</a></p>
-          <p class="meta"><strong>Cabinet secondaire :</strong><br>L’Orient Palace, 1 rue de la République, 06500 Menton<br><strong>Portable :</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
+          <p class="meta"><strong>Cabinet :</strong><br>15 rue de l'Hôtel des Postes, 06000 Nice<br><strong>Tél :</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
           <p class="meta"><strong>Email :</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
           <p class="meta"><strong>Horaires :</strong> Lun–Ven 9:00–18:00 (sur rendez‑vous)</p>
         </aside>
@@ -140,13 +140,8 @@
   <footer>
     <div class="container footer-grid">
       <div>
-        <p class="meta">
-  Nice — 15 rue de l’Hôtel des Postes, 06000 Nice —
-  <a href="tel:+33493803069">04 93 80 30 69</a><br>
-  Menton — L’Orient Palace, 1 rue de la République, 06500 Menton —
-  <a href="tel:+33660723599">06 60 72 35 99</a><br>
-  <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
-</p>
+        <p class="meta">Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
+<a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
         <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
