--- a/famille-en.html
+++ b/famille-en.html
@@ -45,6 +45,7 @@
           <li><a href="./index-en.html">Home</a></li>
           <li><a href="./cabinet-en.html">The firm</a></li>
           <li><a href="./famille-en.html" aria-current="page">Family law</a></li>
+          <li><a href="./transactions-en.html">Real estate transactions</a></li>
           <li><a href="./honoraires-en.html">Fees</a></li>
           <li><a class="btn btn-primary" href="./contact-en.html">Contact</a></li>
         </ul>
@@ -71,7 +72,7 @@
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact-en.html">Book an appointment</a>
-            <a class="btn" href="tel:+33493803069">Call the office</a>
+            <a class="btn" href="tel:+33660723599">Call the office</a>
           </div>
 
           <p class="meta" style="margin-top:.8rem;">
@@ -197,8 +198,7 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-          Nice — 15 rue de l’Hôtel des Postes, 06000 Nice — <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
-          Menton — L’Orient Palace, 1 rue de la République, 06500 Menton — <a href="tel:+33660723599">+33 6 60 72 35 99</a><br>
+          Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
           <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
         </p>
       </div>
