--- a/famille-it.html
+++ b/famille-it.html
@@ -50,6 +50,7 @@
           <li><a href="./index-it.html">Home</a></li>
           <li><a href="./cabinet-it.html">Lo studio</a></li>
           <li><a href="./famille-it.html" aria-current="page">Diritto di famiglia</a></li>
+          <li><a href="./transactions-it.html">Transazioni immobiliari</a></li>
           <li><a href="./honoraires-it.html">Onorari</a></li>
           <li><a class="btn btn-primary" href="./contact-it.html">Contatto</a></li>
         </ul>
@@ -72,7 +73,7 @@
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact-it.html">Prendere appuntamento</a>
-            <a class="btn" href="tel:+33493803069">Chiamare lo studio</a>
+            <a class="btn" href="tel:+33660723599">Chiamare lo studio</a>
           </div>
 
           <p class="meta" style="margin-top:.8rem;">
@@ -205,7 +206,16 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-  Nizza — 15 rue de l’Hôtel des Postes, 06000 Nice —
-  <a href="tel:+33493803069">04 93 80 30 69</a><br>
-  Mentone — L’Orient Palace, 1 rue de la République, 06500 Menton —
-  <a hre
+          Nizza — 15 rue de l'Hôtel des Postes, 06000 Nizza — <a href="tel:+33660723599">06 60 72 35 99</a><br>
+          <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
+        </p>
+      </div>
+      <div class="footer-links" aria-label="Link footer">
+        <a href="./mentions-legales-it.html">Note legali</a>
+        <a href="./confidentialite-it.html">Privacy</a>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
