--- a/honoraires-it.html
+++ b/honoraires-it.html
@@ -52,6 +52,7 @@
           <li><a href="./index-it.html">Home</a></li>
           <li><a href="./cabinet-it.html">Lo studio</a></li>
           <li><a href="./famille-it.html">Diritto di famiglia</a></li>
+          <li><a href="./transactions-it.html">Transazioni immobiliari</a></li>
           <li><a href="./honoraires-it.html" aria-current="page">Onorari</a></li>
           <li><a class="btn btn-primary" href="./contact-it.html">Contatto</a></li>
         </ul>
@@ -164,10 +165,7 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-          Nizza — 15 rue de l’Hôtel des Postes, 06000 Nizza —
-          <a href="tel:+33493803069">04 93 80 30 69</a><br>
-          Mentone — L’Orient Palace, 1 rue de la République, 06500 Mentone —
-          <a href="tel:+33660723599">06 60 72 35 99</a><br>
+          Nizza — 15 rue de l'Hôtel des Postes, 06000 Nizza — <a href="tel:+33660723599">06 60 72 35 99</a><br>
           <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
         </p>
       </div>
