--- a/honoraires.html
+++ b/honoraires.html
@@ -50,6 +50,7 @@
           <li><a href="./index.html">Accueil</a></li>
           <li><a href="./cabinet.html">Le cabinet</a></li>
           <li><a href="./famille.html">Droit de la famille</a></li>
+          <li><a href="./transactions.html">Transactions immobilières</a></li>
           <li><a href="./honoraires.html" aria-current="page">Honoraires</a></li>
           <li><a class="btn btn-primary" href="./contact.html">Contact</a></li>
         </ul>
@@ -159,13 +160,8 @@
   <footer>
     <div class="container footer-grid">
       <div>
-        <p class="meta">
-  Nice — 15 rue de l’Hôtel des Postes, 06000 Nice —
-  <a href="tel:+33493803069">04 93 80 30 69</a><br>
-  Menton — L’Orient Palace, 1 rue de la République, 06500 Menton —
-  <a href="tel:+33660723599">06 60 72 35 99</a><br>
-  <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
-</p>
+        <p class="meta">Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
+<a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
         <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
