--- a/index-en.html
+++ b/index-en.html
@@ -35,6 +35,7 @@
           <li><a href="./index-en.html" aria-current="page">Home</a></li>
           <li><a href="./cabinet-en.html">The firm</a></li>
           <li><a href="./famille-en.html">Family law</a></li>
+          <li><a href="./transactions-en.html">Real estate transactions</a></li>
           <li><a href="./honoraires-en.html">Fees</a></li>
           <li><a class="btn btn-primary" href="./contact-en.html">Contact</a></li>
         </ul>
@@ -51,7 +52,7 @@
           <p class="lead">Divorce, separation, family organisation, children, estates. Clear, rigorous legal support adapted to your situation.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact-en.html">Book an appointment</a>
-            <a class="btn" href="tel:+33493803069">Call the office</a>
+            <a class="btn" href="tel:+33660723599">Call the office</a>
           </div>
         </div>
         <aside class="figure" aria-label="Portrait">
@@ -71,8 +72,7 @@
           </div>
           <aside class="card">
             <h3>Offices & contact</h3>
-            <p class="meta"><strong>Main office:</strong><br>15 rue de l’Hôtel des Postes, 06000 Nice<br><strong>Phone:</strong> <a href="tel:+33493803069">+33 4 93 80 30 69</a></p>
-            <p class="meta"><strong>Secondary office:</strong><br>L’Orient Palace, 1 rue de la République, 06500 Menton<br><strong>Mobile:</strong> <a href="tel:+33660723599">+33 6 60 72 35 99</a></p>
+            <p class="meta"><strong>Office:</strong><br>15 rue de l'Hôtel des Postes, 06000 Nice<br><strong>Phone:</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
             <p class="meta"><strong>Email:</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
           </aside>
         </div>
@@ -116,8 +116,7 @@
   <footer>
     <div class="container footer-grid">
       <div>
-        <p class="meta">Nice — 15 rue de l’Hôtel des Postes, 06000 Nice — <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
-        Menton — L’Orient Palace, 1 rue de la République, 06500 Menton — <a href="tel:+33660723599">+33 6 60 72 35 99</a><br>
+        <p class="meta">Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
         <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Footer links">
