--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a href="./index.html" aria-current="page">Accueil</a></li>
           <li><a href="./cabinet.html">Le cabinet</a></li>
           <li><a href="./famille.html">Droit de la famille</a></li>
+          <li><a href="./transactions.html">Transactions immobilières</a></li>
           <li><a href="./honoraires.html">Honoraires</a></li>
           <li><a class="btn btn-primary" href="./contact.html">Contact</a></li>
         </ul>
@@ -69,12 +70,11 @@ familiales.
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact.html">Prendre rendez-vous</a>
-            <a class="btn" href="tel:+33493803069">Appeler le cabinet</a>
+            <a class="btn" href="tel:+33660723599">Appeler le cabinet</a>
           </div>
 
           <p class="meta" style="margin-top: .8rem;">
             <span class="badge">Nice</span>
-            <span class="badge">Menton (sur rendez-vous)</span>
           </p>
         </div>
 
@@ -106,8 +106,7 @@ ou d'un contentieux.
           </div>
           <aside class="card">
             <h3>Cabinets & contact</h3>
-            <p class="meta"><strong>Cabinet principal :</strong> 15 rue de l'Hôtel des Postes, 06000 Nice<br><strong>Tél :</strong> <a href="tel:+33493803069">04 93 80 30 69</a></p>
-            <p class="meta"><strong>Cabinet secondaire :</strong> L'Orient Palace, 1 rue de la République, 06500 Menton<br><strong>Portable :</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
+            <p class="meta"><strong>Cabinet :</strong> 15 rue de l'Hôtel des Postes, 06000 Nice<br><strong>Tél :</strong> <a href="tel:+33660723599">06 60 72 35 99</a></p>
             <p class="meta"><strong>Email :</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
           </aside>
         </div>
@@ -186,7 +185,7 @@ les suites possibles.
           <p class="meta">Expliquez brièvement votre situation : je vous répondrai pour proposer un rendez-vous adapté.</p>
           <div class="hero-actions" style="margin-top:.8rem;">
             <a class="btn btn-primary" href="./contact.html">Prendre rendez-vous</a>
-            <a class="btn" href="tel:+33493803069">Appeler le cabinet</a>
+            <a class="btn" href="tel:+33660723599">Appeler le cabinet</a>
           </div>
         </div>
       </div>
@@ -196,13 +195,8 @@ les suites possibles.
   <footer>
     <div class="container footer-grid">
       <div>
-        <p class="meta">
-  Nice — 15 rue de l'Hôtel des Postes, 06000 Nice —
-  <a href="tel:+33493803069">04 93 80 30 69</a><br>
-  Menton — L'Orient Palace, 1 rue de la République, 06500 Menton —
-  <a href="tel:+33660723599">06 60 72 35 99</a><br>
-  <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
-</p>
+        <p class="meta">Nice — 15 rue de l'Hôtel des Postes, 06000 Nice — <a href="tel:+33660723599">06 60 72 35 99</a><br>
+<a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
         <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
