--- a/mentions-legales-it.html
+++ b/mentions-legales-it.html
@@ -37,7 +37,7 @@
         <strong>Avv. Mary ALBERTIN ROBY</strong><br>
         Avvocato iscritta all’Ordine degli Avvocati di Nizza<br>
         15 rue de l’Hôtel des Postes, 06000 Nizza<br>
-        Telefono: <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
+        Telefono: <a href="tel:+33660723599">06 60 72 35 99</a><br>
         Email: <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
       </p>
 
