--- a/index-it.html
+++ b/index-it.html
@@ -48,6 +48,7 @@
           <li><a href="./index-it.html" aria-current="page">Home</a></li>
           <li><a href="./cabinet-it.html">Lo studio</a></li>
           <li><a href="./famille-it.html">Diritto di famiglia</a></li>
+          <li><a href="./transactions-it.html">Transazioni immobiliari</a></li>
           <li><a href="./honoraires-it.html">Onorari</a></li>
           <li><a class="btn btn-primary" href="./contact-it.html">Contatto</a></li>
         </ul>
@@ -69,12 +70,11 @@
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="./contact-it.html">Fissare un appuntamento</a>
-            <a class="btn" href="tel:+33493803069">Chiamare lo studio</a>
+            <a class="btn" href="tel:+33660723599">Chiamare lo studio</a>
           </div>
 
           <p class="meta" style="margin-top: .8rem;">
             <span class="badge">Nizza</span>
-            <span class="badge">Mentone (su appuntamento)</span>
           </p>
         </div>
 
@@ -118,12 +118,8 @@
           <aside class="card">
             <h3>Studi & contatto</h3>
             <p class="meta">
-              <strong>Sede principale:</strong> 15 rue de l’Hôtel des Postes, 06000 Nizza<br>
-              <strong>Tel:</strong> <a href="tel:+33493803069">04 93 80 30 69</a>
-            </p>
-            <p class="meta">
-              <strong>Sede secondaria:</strong> L’Orient Palace, 1 rue de la République, 06500 Mentone<br>
-              <strong>Cellulare:</strong> <a href="tel:+33660723599">06 60 72 35 99</a>
+              <strong>Studio:</strong> 15 rue de l'Hôtel des Postes, 06000 Nizza<br>
+              <strong>Tel:</strong> <a href="tel:+33660723599">06 60 72 35 99</a>
             </p>
             <p class="meta">
               <strong>Email:</strong> <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
@@ -214,10 +210,7 @@
     <div class="container footer-grid">
       <div>
         <p class="meta">
-          Nizza — 15 rue de l’Hôtel des Postes, 06000 Nizza —
-          <a href="tel:+33493803069">04 93 80 30 69</a><br>
-          Mentone — L’Orient Palace, 1 rue de la République, 06500 Mentone —
-          <a href="tel:+33660723599">06 60 72 35 99</a><br>
+          Nizza — 15 rue de l'Hôtel des Postes, 06000 Nizza — <a href="tel:+33660723599">06 60 72 35 99</a><br>
           <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
         </p>
       </div>
