--- a/mentions-legales-en.html
+++ b/mentions-legales-en.html
@@ -39,7 +39,7 @@
         <strong>Mary ALBERTIN ROBY</strong><br>
         Attorney at the Nice Bar<br>
         15 rue de l’Hôtel des Postes, 06000 Nice, France<br>
-        Phone: <a href="tel:+33493803069">+33 4 93 80 30 69</a><br>
+        Phone: <a href="tel:+33660723599">06 60 72 35 99</a><br>
         Email: <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a>
       </p>
 
